--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "element-ui": "^2.0.11",
     "vue": "^2.5.11"
   },
@@ -27,6 +28,7 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "mockjs": "^1.0.1-beta3",
     "style-loader": "^0.19.1",
     "vue-loader": "^13.0.5",
     "vue-router": "^3.0.1",
